--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,400&display=swap");
 @import "reset.css";
 @import "status-bar.css";
+@import "variables.css";
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -26,4 +27,18 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0px 30px;
+}
+#login-form input {
+  border: none;
+  padding: 15px 0px;
+  font-size: 18px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  margin-bottom: 20px;
+  transition: border-color 0.3s ease-in-out;
+}
+#login-form input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+#login-form input:focus {
+  border-color: var(--yellow);
 }
