--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,10 @@ body {
   border: none;
   padding: 15px 0px;
   font-size: 18px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   margin-bottom: 20px;
+}
+#login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   transition: border-color 0.3s ease-in-out;
 }
 #login-form input::placeholder {
