--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,400&display=swap");
 @import "reset.css";
-@import "status-bar.css";
 @import "variables.css";
+/* Components */
+@import "components/status-bar.css";
+/* Screens */
+@import "screens/login.css";
 body {
   font-family: "Open Sans", sans-serif;
-}
-
-.welcome-header {
-  margin: 90px 0px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-weight: 600;
-}
-.welcome-header__title {
-  font-size: 25px;
-  margin-bottom: 40px;
-}
-.welcome-header__text {
-  width: 60%;
-  opacity: 0.8;
-}
-
-#login-form {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 30px;
-}
-#login-form input {
-  border: none;
-  padding: 15px 0px;
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-#login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-  transition: border-color 0.3s ease-in-out;
-}
-#login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-#login-form input:focus {
-  border-color: var(--yellow);
 }
