--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,9 +1,34 @@
 .nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  box-sizing: border-box;
   background-color: #f9f9fa;
-  padding: 20px 40px;
+  padding: 20px 50px;
+  border-top: 1px solid rgba(0, 0, 0, 0.35);
 }
 
 .nav__list {
   display: flex;
   justify-content: space-between;
+}
+
+.nav__link {
+  position: relative;
+  color: #2e363e;
+}
+
+.nav__notification {
+  background-color: tomato;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 100;
+  position: absolute;
+  left: 20px;
+  bottom: 18px;
 }
