--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 @import "components/screen-header.css";
 /* Screens */
 @import "screens/login.css";
+@import "screens/freinds.css";
+
 body {
   font-family: "Open Sans", sans-serif;
 }
