--- a/css/screens/freinds.css
+++ b/css/screens/freinds.css
@@ -1,5 +1,10 @@
-.friends-display-link {
+#friends-display-link {
   display: block;
   text-align: center;
   background-color: #fafafa;
+  padding: 15px 0px;
+}
+
+#friends-display-link i {
+  color: rgba(0, 0, 0, 0.3);
 }
