--- a/css/screens/freinds.css
+++ b/css/screens/freinds.css
@@ -4,9 +4,14 @@
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 17px;
+  margin-bottom: 12px;
 }
 
 #friends-display-link i {
   padding: 0px 13px;
   color: rgba(0, 0, 0, 0.3);
+}
+
+.friends-screen {
+  padding: 0px var(--horizontal-space);
 }
