--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -42,15 +42,6 @@
   font-weight: 10;
 }
 
-.friends-screen__channel {
-  margin-top: 25px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  padding-top: 15px;
-}
-
-.friends-screen__channel-header {
-  margin-bottom: 30px;
-  display: flex;
-  justify-content: space-between;
+.user-component__column:last-child {
   color: rgba(0, 0, 0, 0.4);
 }
