--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 /* Screens */
 @import "screens/login.css";
 @import "screens/freinds.css";
+@import "screens/find.css";
 
 body {
   color: #2e363e;
