--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -28,7 +28,7 @@
   margin-bottom: 20px;
 }
 #login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  border-bottom: var(--main-border);
   transition: border-color 0.3s ease-in-out;
 }
 #login-form input::placeholder {
