--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -18,3 +18,20 @@
   width: 100px;
   text-align: center;
 }
+
+.recommended-friends {
+  margin: 20px 0px;
+  border-bottom: var(--main-border);
+}
+.recommended-friends__title {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.45);
+}
+
+.recommended-friends span {
+  margin: 130px 0px;
+  display: block;
+  text-align: center;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.45);
+}
