--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -48,6 +48,8 @@
 
 .open-post {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .open-post__title {
   font-weight: 100;
@@ -86,4 +88,30 @@
 
 .open-post__member-status {
   color: #f897d1;
+}
+.open-post__photo {
+  position: relative;
+}
+
+.open-post__photo img {
+  width: 100px;
+  height: 100px;
+  border-radius: 25px;
+}
+
+.open-post__heart-count {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 7px;
+  right: 10px;
+  font-size: 13px;
+}
+
+.open-post__heart-count span {
+  margin-left: 4px;
 }
