post2개 이상의 경우 테스트

--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -50,6 +50,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.open-post:last-child {
+  /*마지막포스트는 밑에 divider 안넣기*/
+  border-bottom: none;
 }
 .open-post__title {
   font-weight: 100;
