--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -1,14 +1,17 @@
 .icon-row {
   display: flex;
   justify-content: space-between;
+
   border-bottom: var(--main-border);
-  padding-bottom: 25px;
+
+  flex-wrap: wrap;
 }
 
 .icon-row__icon {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 30px;
 }
 .icon-row__icon i {
   font-size: 32px;
