--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
 @import "screens/login.css";
 @import "screens/freinds.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 body {
   color: #2e363e;
