--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
-  top: 25px;
+
+  margin-top: 25px;
   margin-bottom: 15px;
 }
 
