--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -8,6 +8,7 @@
   width: 100%;
   box-sizing: border-box;
   background-color: #abc1d1;
+  box-sizing: border-box;
 }
 .chat-screen .status-bar {
   top: 0px;
@@ -21,5 +22,15 @@
 }
 
 .main-chat {
-  margin-top: 100px;
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.chat__timestamp {
+  color: white;
+  background-color: #92a4b2;
+  padding: 8px 15px;
+  border-radius: 14px;
+  font-size: 14px;
 }
