--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -31,6 +31,43 @@
   color: white;
   background-color: #92a4b2;
   padding: 8px 15px;
-  border-radius: 14px;
   font-size: 14px;
+  border-radius: 24px;
+  margin-bottom: 25px;
+}
+
+.message-row {
+  width: 100%;
+  display: flex;
+}
+
+.message-row img {
+  width: 50px;
+  height: 50px;
+  border-radius: 45%;
+  margin-right: 15px;
+}
+
+.message__author {
+  opacity: 0.8;
+  font-size: 18px;
+  display: block; /*span 은 기본적으로 블록형태가 아니라서 margin-bottom을 줄 수 없어.*/
+  margin-bottom: 8px;
+}
+
+.message__bubble {
+  background-color: white;
+  padding: 13px;
+  border-radius: 15px;
+  border-top-left-radius: 0px;
+  margin-right: 7px;
+  margin-bottom: 5px;
+}
+.message__info {
+  display: flex;
+  align-items: flex-end;
+}
+.message__time {
+  opacity: 0.8;
+  font-size: 15px;
 }
