--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -39,6 +39,7 @@
 .message-row {
   width: 100%;
   display: flex;
+  margin-bottom: 23px;
 }
 
 .message-row img {
@@ -70,4 +71,31 @@
 .message__time {
   opacity: 0.8;
   font-size: 15px;
+}
+/* 내가 작성하는 메시지 css */
+.message-row--own {
+  justify-content: flex-end;
+}
+
+.message-row--own .message__bubble {
+  background-color: var(--yellow);
+  border-top-right-radius: 0px;
+  border-top-left-radius: 15px;
+
+  /* 시간이랑 말풍선 위치 바꾸는 1번 방법
+  order: 1; */
+
+  /* 시간이랑 말풍선 위치 바꾸는 2번 방법*/
+  margin-right: 0px;
+  margin-left: 10px;
+}
+
+.message-row--own .message__time {
+  /* 시간이랑 말풍선 위치 바꾸는 1번 방법
+  order: 0;*/
+}
+
+/* 시간이랑 말풍선 위치 바꾸는 2번 방법*/
+.message-row--own .message__info {
+  flex-direction: row-reverse;
 }
