--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -36,6 +36,7 @@
   position: absolute;
   left: 20px;
   bottom: 18px;
+  /* 애니매이션 만들기 */
   animation: notificationAnimation 1s ease-in-out infinite;
 }
 .nav__notification__little {
@@ -46,4 +47,27 @@
   position: absolute;
   left: 29px;
   bottom: 25px;
+}
+/* 아이콘들 밑에서 올라오면서 진해지게 만들기 */
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+.nav__btn {
+  transform: translateY(90px);
+  animation: appearBtnAnimation 0.2s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.3s;
 }
