--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -16,3 +16,16 @@
 .screen-header__icons span {
   margin-left: 24px;
 }
+
+/* /header에 있는 톱니바퀴아이콘 (settings로 가는 버튼) 에 마우스가 올라가면 rotate하는 animation */
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 2s linear infinite;
+}
