--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -21,6 +21,15 @@
   z-index: 1;
 }
 
+@keyframes fadeIn-chat {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .main-chat {
   margin-top: 120px;
   display: flex;
@@ -34,12 +43,23 @@
   font-size: 14px;
   border-radius: 24px;
   margin-bottom: 25px;
+  animation: fadeIn-chat 1s linear;
 }
-
+@keyframes commingMessage {
+  from {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
 .message-row {
   width: 100%;
   display: flex;
   margin-bottom: 23px;
+  animation: commingMessage 0.5s linear;
 }
 
 .message-row img {
@@ -73,8 +93,20 @@
   font-size: 15px;
 }
 /* 내가 작성하는 메시지 css */
+@keyframes ownMessage {
+  from {
+    transform: translateX(300px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
 .message-row--own {
   justify-content: flex-end;
+  animation: ownMessage 0.5s linear;
 }
 
 .message-row--own .message__bubble {
@@ -110,14 +142,17 @@
   padding: 5px 25px;
   align-items: center;
   box-sizing: border-box;
+  /* 인풋창 클릭시 transitio 처리 방법 중 하나 */
+  transition: all 0.3s ease-in-out;
 }
 .reply input {
   padding: 10px;
-  width: 100%;
+  width: 95%;
   border: var(--main-border);
   border-radius: 15px;
   font-size: 17px;
   font-weight: 550;
+  transition: all 0.3s ease-in-out;
 }
 .reply .reply__column:first-child {
   width: 10%;
@@ -131,13 +166,14 @@
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: -15px;
+  /* 버튼 위치조정 */
+  right: 5px;
   top: 7px;
 }
 
 .reply__column:last-child > i {
   top: 15px;
-  right: 25px;
+  right: 39px;
 }
 .reply__column button {
   background-color: var(--yellow);
@@ -153,4 +189,26 @@
 }
 .reply__column > i {
   opacity: 0.7;
+}
+
+/* focus-within옵션-> 인풋창을 클릭하면 바로 늘어나면서, 버튼이랑 이모티콘이 사라짐 */
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-beam,
+.reply:focus-within button {
+  opacity: 0;
+  visibility: hidden;
+}
+.reply:focus-within input {
+  width: 92vw;
+  transform: translateX(-13%) translateY(-80px);
+}
+/* 아이콘 사라질 때 좀더 깐지나게 */
+.reply .reply__column:first-child,
+.reply .fa-smile-beam,
+.reply button {
+  transition: opacity 1.5s ease-in-out;
+}
+/* 인풋창 클릭하면 흰색배경 밑으로 내려가게! */
+.reply:focus-within {
+  transform: translateY(80px);
 }
