화면 사이즈에 대한 dispaly처리
미디어쿼리 사용

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -122,10 +122,11 @@
   margin-left: 10px;
 }
 
+/* 시간이랑 말풍선 위치 바꾸는 1번 방법
 .message-row--own .message__time {
-  /* 시간이랑 말풍선 위치 바꾸는 1번 방법
-  order: 0;*/
+  order: 0;
 }
+*/
 
 /* 시간이랑 말풍선 위치 바꾸는 2번 방법*/
 .message-row--own .message__info {
