--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/icon-row.css";
+@import "components/no-mibile.css";
 
 /* Screens */
 @import "screens/login.css";
